--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,10 @@ security:
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
+            remember_me:
+                secret: '%kernel.secret'
+                always_remember_me: true
+                signature_properties: [password]
             logout:
                 path: app_logout
                 # where to redirect after logout
